# parallel-and-multicore-computing

./: .gitignore  README.md  main.c
1A/: main.c  (+8 more)
1B/: CMakeLists.txt  example-input.txt  main.c  main.cpp  mandelbrot-sequential.c  mpi-helloworld.c  openmp-openmpi-hello.c
1B/delivery/: README
1B/examples/: a.out
1B/inputs/: big-input.txt
1B/spartan/: README  add-batch.sh  compile-sequential-mandelbrot.sh  main  seq  seq-alg
1B/spartan/old-slurm/: hello-world.slurm
2/: 1c-hybrid-run.sh  4clique-hybrid  4clique-hybrid.cpp  4clique-mp-2t  4clique-mp-3t  4clique-mp-4t  4clique-mp.cpp  4clique-mpi  4clique-mpi.cpp  4clique-seq  4clique-sequential.cpp  CMakeLists.txt  input-generator.py  input.txt  knapsack-hybrid.cpp  knapsack-mp.cpp  knapsack-mpi.cpp  knapsack-sequential.cpp  main.cpp  notes.txt  run-jobs-dynamic.sh  run-jobs.sh  tsp-hybrid.cpp  tsp-mp  tsp-mp.cpp  tsp-mpi.cpp  tsp-sequential.cpp
2/cuda/: README  add  cuda-example.cu  cuda-example.out  cuda.slurm
2/delivery/: README
2/input/: 10.txt  100.txt  15.txt  20.txt  200.txt  2000.txt  30.txt  300.txt  350.txt  4.txt  40.txt  400.txt  50.txt  500.txt  60.txt  600.txt  70.txt  700.txt  80.txt  800.txt  90.txt  input-generator.py  test-data.txt
2/results/: .static-1-scheduling-sheetformat.csv.swp  300-results-sheetformat.csv  300-results.txt  350-results-sheetformat.csv  350-results.txt  dynamic-results-sheetformat.csv  dynamic-results.txt  static-1-scheduling-sheetformat.csv  static-1-scheduling.txt
2/spartan/: 2018-10-17-11-57-13.txt  add-batch.sh  gather-output.sh  main  results-to-csv.py
(+106 files in other folders)
